# my_rust_protos

./: Cargo.toml  LICENSE  README.md  build.rs  my_rust_protos.h
.github/workflows/: release.yml
protos/: Greetings.proto  Person.proto  Response.proto  error.proto  greetings.proto  module.proto  person.proto  response.proto
src/: buffer_utils.rs  general_utils.rs  greet.rs  instances.rs  lib.rs  messages.rs  person.rs  utils.rs
